--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "bootstrap": "^5.1.3",
     "glob-parent": "^6.0.2",
     "moment": "^2.29.3",
