--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,24 +1,14 @@
-version: 0.1
-
+version: 0.2
 phases:
   install:
+    runtime-versions:
+      nodejs: 18.x
     commands:
-      - echo installing nodejs...
-      - curl -sL https://deb.nodesource.com/setup_18.x | bash -
-      - apt-get install -y nodejs
-      - echo installing yarn...
-      - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
-      - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
-      - apt install --no-install-recommends yarn
-  pre_build:
-    commands:
-      - echo installing dependencies...
-      - npm i -g @angular/cli
-      - npm install
+      - echo install process started
+      - npm install && npm install -g @angular/cli
   build:
     commands:
-      # - echo testing...
-      # - echo building...
+      - echo build process started now
       - ng build --prod
 artifacts:
   files:
